[tool.poetry]
name = "sage-engine"
version = "2.1.2"
description = "Sage: a SPARQL query engine for public Linked Data providers"
repository = "https://github.com/sage-org/sage-engine"
authors = [ "Thomas Minier <tminier01@gmail.com>" ]
keywords = [ "rdf", "sparql", "query engine" ]
readme = "README.md"
license = "MIT"
packages = [
  { include = "sage" }
]
include = [
  "requirements.txt",
  "README.md",
  "README.rst"
]
exclude = [ "tests" ]

[tool.poetry.scripts]
sage = "sage.cli.http_server:start_sage_server"
sage-grpc = "sage.cli.grpc_server:start_grpc_server"
sage-postgres-init = "sage.cli.postgres:init_postgres"
sage-postgres-index = "sage.cli.postgres:index_postgres"
sage-postgres-put = "sage.cli.postgres:put_postgres"

[tool.poetry.dependencies]
python = "^3.7"
uvloop = "0.14.0"
PyYAML = "5.1.2"
rdflib = "4.2.2"
rdflib-jsonld = "0.4.0"
protobuf = "3.11.0"
click = "7.0"
fastapi = "0.44.1"
uvicorn = "0.10.8"
grpcio = "^1.26"
# optional dependencies
pybind11 = { version = "2.2.4", optional = true }
hdt = { version = "2.3", optional = true }
psycopg2-binary = { version = "2.7.7", optional = true }

[tool.poetry.extras]
hdt = ["pybind11", "hdt"]
postgres = ["psycopg2-binary"]

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.10.0"
requests = "^2.22"
sphinx = "^2.3"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
